Kubernetes/sonar-qube/sonarqube-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service-tamer
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app.kubernetes.io/instance: tamer-sonar
#
