Kubernetes/sonar-qube/sonarqube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress-tamer
  namespace: tamer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    
spec:
  ingressClassName: nginx
  rules:
  - host: tamer-sonar.atech-bot.click
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sonarqube-service-tamer
            port:
              number: 9000
  tls:
  - hosts:
    - tamer-sonar.atech-bot.click
    secretName: tamer-sonar-new
